# permute

./: BUILD  ChangeLog  configure.ac  dodeb.sh
debian/: control
debian/tests/: control
doc/: permute.texi
man/: permute.x
